--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "test": "npm run e2e"
   },
   "dependencies": {
+    "echarts": "^3.4.0",
+    "element-ui": "^1.2.1",
     "vue": "^2.1.10",
     "vue-router": "^2.2.0"
   },
@@ -51,7 +53,10 @@
     "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.16.1",
-    "webpack-merge": "^2.6.1"
+    "webpack-merge": "^2.6.1",
+    "json-loader": "^0.5.4",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3"
   },
   "engines": {
     "node": ">= 4.0.0",
